# openrisc-prototype-flash-tool

./: Cargo.toml  README.md
src/: device.rs  log.rs  main.rs
